--- a/src/yaml/TagOne/tag-one-industrial-compilation.yaml
+++ b/src/yaml/TagOne/tag-one-industrial-compilation.yaml
@@ -1373,11 +1373,11 @@ assets:
 ---
 group: tag-one
 name: tag-one-industrial-collection
-version: "1.2"
+version: "1.0.0"
 subfolder: 400-industrial
 info:
   summary: Industrial Collection Pack
-  description: A collection of 41 Industrial Lot by Tag One
+  description: A collection of 41 Industrial Lots by Tag One
   author: Tag One
   website: https://www.sc4evermore.com/index.php/downloads/download/13-industrial/367-sc4d-lex-legacy-bsc-tag-one-industrial-compilation
   images:
