--- a/src/yaml/TagOne/tag-one-residential-compilation.yaml
+++ b/src/yaml/TagOne/tag-one-residential-compilation.yaml
@@ -153,7 +153,7 @@ subfolder: 200-residential
 info:
   summary: Paloma Tower Residential Lot
   description: |
-   This is the Paloma Tower, 37 stories high and ready to be occupied by your medium wealthy sims, at least if you have the CAM installed. Why? Because this file gives you a stage 10 and a stage 12 growable building. These highrises grow on 2x3 and 2x2 sized lots. As bonus I've included a 4x4 CS$$$ plobable lot. Also, all the buildings are slope friendly for soft slopes.  
+   This is the Paloma Tower, 37 stories high and ready to be occupied by your medium wealthy sims, at least if you have the CAM installed. Why? Because this file gives you a stage 10 and a stage 12 growable building. These highrises grow on 2x3 and 2x2 sized lots. Also, all the buildings are slope friendly for soft slopes.  
   author: Tag One
   websites: 
     - https://www.sc4evermore.com/index.php/downloads/download/11-residential/366-sc4d-lex-legacy-bsc-tag-one-residential-compilation
@@ -518,7 +518,7 @@ subfolder: 200-residential
 info:
   summary: JENX Re-lotted Residential Lot
   description: |
-    This is the first pack of the JENX relotted series. In the past JENX made some very nice buildings, unfortunately his lots got outdated. and were poorly modded to today's standards. Therefore I've decided to relot his work and give the buildings new stats. This pack contains 25 lots with a selection of his German timber frame houses. All lot's are campatible and BTE enabled. The buildings range from stage 1 to stage 7 and are mostly R$$, however there also some R$ and R$$$ buildings.  Some of these lots are W2W.
+    This is the first pack of the JENX relotted series. In the past JENX made some very nice buildings, unfortunately his lots got outdated. and were poorly modded to today's standards. This pack contains 25 lots with a selection of his German timber frame houses. All lot's are campatible and BTE enabled. The buildings range from stage 1 to stage 7 and are mostly R$$, however there also some R$ and R$$$ buildings.  Some of these lots are W2W.
   author: Tag One
   websites: 
     - https://www.sc4evermore.com/index.php/downloads/download/11-residential/366-sc4d-lex-legacy-bsc-tag-one-residential-compilation
