--- a/src/yaml/TagOne/tag-one-residential-compilation.yaml
+++ b/src/yaml/TagOne/tag-one-residential-compilation.yaml
@@ -198,7 +198,7 @@ subfolder: 200-residential
 info:
   summary: Trident Tower Residential Lot
   description: |
-   This is the Trident Tower I, a 57 story high skyscraper for your mid wealthy sims. But before you'll get it to grow, you'll need to have a huge city. This building is namely a stage 15 building, the highest stage you can reach with the CAM. Apart from a stage 15 building, this building also is slope friendly for soft and medium slopes.   
+   This is the Trident Tower, a 57 story high skyscraper for your mid wealthy sims. But before you'll get it to grow, you'll need to have a huge city. This building is namely a stage 15 building, the highest stage you can reach with the CAM. Apart from a stage 15 building, this building also is slope friendly for soft and medium slopes.   
   author: Tag One
   website: https://www.sc4evermore.com/index.php/downloads/download/11-residential/366-sc4d-lex-legacy-bsc-tag-one-residential-compilation
   images:
@@ -424,7 +424,7 @@ info:
   description: |
     This is a set of five low wealth apartment buildings. These kinds of buildings can be found in Dutch low wealth areas commonly. All five buildings are merged into a single building family and grow on a single stage 5 lot. Each building provides homes for up to 206 sims.
 
-    This file is an updated version of the one I uploaded in July 2006 on Simtropolis. If you still have the old version there no need to delete it. Simply overwrite the old files with this one and you'll be fine. Keep in mind that this version has about two times as much residents. If you have a lot of these buildings from the older version in your city you will notice a increase of residents.
+    This file is an updated version of the one on Simtropolis. If you still have the old version there no need to delete it. Simply overwrite the old files with this one and you'll be fine. Keep in mind that this version has about two times as much residents. If you have a lot of these buildings from the older version in your city you will notice a increase of residents.
     
   author: Tag One
   websites: 
