remove url query param

--- a/src/yaml/mikeseith/multi-level-modular-garages.yaml
+++ b/src/yaml/mikeseith/multi-level-modular-garages.yaml
@@ -53,4 +53,4 @@ variantInfo:
 assetId: mikeseith-8-level-modular-garages
 version: "Version 3"
 lastModified: "2023-12-06T02:26:15-08:00"
-url: https://www.sc4evermore.com/index.php/downloads?task=download.send&id=204:sc4d-lex-legacy-mikeseith-multi-level-modular-garages&catid=19
+url: https://www.sc4evermore.com/index.php/downloads?task=download.send&id=204:sc4d-lex-legacy-mikeseith-multi-level-modular-garages
