--- a/src/yaml/mikeseith/multi-level-modular-garages.yaml
+++ b/src/yaml/mikeseith/multi-level-modular-garages.yaml
@@ -1,6 +1,6 @@
 group: mikeseith
 name: multi-level-modular-garages
-version: "2.0"
+version: "Version 3"
 subfolder: 700-transit
 info:
   summary: Contains a modular set of 2-level and 8-level parking garages.
