fix typo in include pattern
resolves #5

--- a/src/yaml/Rubik/wtc-complex.yaml
+++ b/src/yaml/Rubik/wtc-complex.yaml
@@ -154,7 +154,7 @@ variants:
   - assetId: "bsc-rubik-wtc-complex"
     exclude:
     - "Two World Trade with Jobs.dat"
-    - "One World Trade with Jobs.dat\""
+    - "One World Trade with Jobs.dat"
 info:
   summary: "BSC Rubik One and Two Trade Center by Rubik3"
   description: |
