--- a/src/yaml/TagOne/tag-one-commercial-compilation.yaml
+++ b/src/yaml/TagOne/tag-one-commercial-compilation.yaml
@@ -277,7 +277,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/Boutique Anna Bella/"   
+  - "/Boutique Anna Bella#/"   
   
 ---
 group: tag-one
@@ -309,7 +309,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/Brown Eye Real Estate/"   
+  - "/Brown Eye Real Estate#/"   
   
 ---
 group: tag-one
@@ -341,7 +341,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/BTE Retail Traders Association/"   
+  - "/BTE Retail Traders Association#/"   
   
 ---
 group: tag-one
@@ -375,7 +375,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/Commercial Mega Lot/"   
+  - "/Commercial Mega Lot#/"   
   
 ---
 group: tag-one
@@ -407,7 +407,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/Comsec Security/"   
+  - "/Comsec Security#/"   
   
 ---
 group: tag-one
@@ -437,7 +437,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/De Bijenkorf/"   
+  - "/De Bijenkorf#/"   
   
 ---
 group: tag-one
@@ -467,7 +467,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/Disco The Shed/"   
+  - "/Disco The Shed#/"   
   
 ---
 group: tag-one
@@ -495,7 +495,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/Hercules Building/"   
+  - "/Hercules Building#/"   
 
 ---
 group: tag-one
@@ -523,7 +523,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/HookUp Urban Fashion/"   
+  - "/HookUp Urban Fashion#/"   
 
 ---
 group: tag-one
@@ -585,7 +585,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/Leurink Architects/"   
+  - "/Leurink Architects#/"   
   
 ---
 group: tag-one
@@ -612,7 +612,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/Shoppingcenter/"   
+  - "/Shoppingcenter#/"   
   
 ---
 group: tag-one
@@ -642,7 +642,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/Sitadel BV/"   
+  - "/Sitadel BV#/"   
   
 ---
 group: tag-one
@@ -672,7 +672,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/Small Timber Frame Shops/"   
+  - "/Small Timber Frame Shops#/"   
   
 ---
 group: tag-one
@@ -701,7 +701,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/Sun Bank/"   
+  - "/Sun Bank#/"   
   
 ---
 group: tag-one
@@ -729,7 +729,7 @@ dependencies:
 assets:
 - assetId: tag-one-commercial-set
   include:
-  - "/The Green River Bar/"   
+  - "/The Green River Bar#/"   
   
 ---
 group: tag-one
