--- a/src/yaml/CAM/cam-spam-controller.yaml
+++ b/src/yaml/CAM/cam-spam-controller.yaml
@@ -1,4 +1,4 @@
-ssetId: "cam-colossus-addon-mod-spam-controller"
+assetId: "cam-colossus-addon-mod-spam-controller"
 version: "3.0.0"
 lastModified: "2025-08-13T18:45:01-07:00"
 url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=415:colossus-addon-mod-spam-controller"
@@ -8,22 +8,33 @@ group: "cam"
 name: "colossus-addon-mod-spam-controller"
 version: "3.0.0"
 subfolder: "050-load-first"
-
-#variants:
-#- variant: { SPAM: "no" }
-#- variant: { SPAM: "yes" }
-  dependencies:
+dependencies:
   - "cam:colossus-addon-mod-ordinances"
   - "cam:colossus-addon-mod-core"
   - "heinbloed4711:hi-tech-missing-high-wealth-jobs"
-
-  assets:
-  - assetId: "cam-colossus-addon-mod-spam-controller"
-  conflicting:
-  #- "peg:spam-legacy-version"
+conflicting:
+  - "peg:spam-legacy-version"
   - "peg:spam"
   - "cam:colossus-addon-mod"
   - "invisichem:colossus-addon-mod-legacy"
+assets:
+  - assetId: "cam-colossus-addon-mod-spam-controller"  
+  
+#variants:
+#- variant: { SPAM: "no" }
+#- variant: { SPAM: "yes" }
+  #dependencies:
+  #- "cam:colossus-addon-mod-ordinances"
+  #- "cam:colossus-addon-mod-core"
+  #- "heinbloed4711:hi-tech-missing-high-wealth-jobs"
+
+  #assets:
+  #- assetId: "cam-colossus-addon-mod-spam-controller"
+  #conflicting:
+  #- "peg:spam-legacy-version"
+  #- "peg:spam"
+  #- "cam:colossus-addon-mod"
+  #- "invisichem:colossus-addon-mod-legacy"
 
 #variantDescriptions:
   #SPAM:
