--- a/src/yaml/CAM/cam-spam-controller.yaml
+++ b/src/yaml/CAM/cam-spam-controller.yaml
@@ -57,9 +57,11 @@ info:
     The changes implemented will allow players to enjoy a vanilla experience in regional and city development, while also allowing them to build rural environments with an existing agricultural demand that is not eliminated when the city grows
     This controller does not contain any farm batches, so it requires you to download compatible third-party content.
     Furthermore, this content is only compatible with CAMeLot Agriculture lots, but only for stages 4, 5, and 6.
+    
     ***WARNING: From version 2.5 onward Colossus Addon Mod works only with the digital version (1.1.641) of SimCity 4 (Microsoft Windows and Linux only). If you run CAM 2.5 or later on systems different from those listed, the mod may malfunction and no support is provided***
+    
     ***MIGRATION:***
-    Migration to CAM 3.0 and later versions can be done if you meet these requirements
+    Migration to CAM - SPAM 3.0 and later versions can be done if you meet these requirements
     * ✅ Players from SPAM (Legacy Version) can switch to CAM 3.0 using only the CAM-SPAM Controller
     * ✅ Players from vanilla can switch to CAM 3.0 using the CAM-SPAM Controller but must create a new region
     Migration to CAM 3.0 and later versions cannot be done if you meet these requirements
